# rugby

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  dev-requirements.txt  pipeline_config.yaml  pyproject.toml  run_tests.py  summaries.html
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/routers/: __init__.py  videos.py
convert/: __init__.py
core/: __init__.py  cli.py  pipeline_models.py  pipeline_runner.py
docker/: Dockerfile
frontend/: README.md  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
generated_sequences/: 20250808_041127_create_a_20s_hype_reel_of_best_tackles.json  20250808_041159_create_a_20s_hype_reel_of_best_tackles.json
indexing/: __init__.py  index_manager.py  srt_parser.py
ingest/: __init__.py  video_finder.py
instance/: rugby_modules.db
ops/: __init__.py  apply_license_headers.py  bootstrap_role.sql  createdb.py  db_admin.py  export_summaries_html.py  run_tests.py
pipelines/: pipeline_linux_machine.yaml  pipeline_linux_machine2.yaml
scripts/: animus_cli.py  build_searchable_index.py  build_tuesday_session_index.py  convert_tuesday_session.sh  convert_videos.sh  create_mp4_only_index.py  ingest_videos.sh  sequence_generator.py  summarize_srt.py  transcribe.sh  update_index_to_mp4.py
storage/: __init__.py  file_utils.py
summaries/pre_sort_broll_01/: M2U00233.json  M2U00234.json  M2U00235.json  M2U00236.json  M2U00237.json  M2U00238.json  M2U00239.json  M2U00240.json  M2U00241.json  M2U00242.json  M2U00243.json  M2U00244.json  M2U00245.json  M2U00246.json  M2U00247.json  M2U00248.json  M2U00249.json  M2U00250.json  M2U00251.json  M2U00252.json  M2U00253.json  M2U00254.json  M2U00255.json  M2U00256.json  M2U00257.json  M2U00258.json  M2U00259.json  M2U00260.json  M2U00261.json  M2U00262.json  M2U00263.json  M2U00264.json  M2U00265.json  M2U00266.json  M2U00267.json  M2U00292.json  M2U00293.json  M2U00294.json  M2U00295.json  M2U00296.json  (+286 more)
summaries/pre_sort_broll_02/: 1990s porn tape.json  M2U00593.json  M2U00595.json  M2U00613.json  M2U00618.json  M2U00639.json  M2U00640.json  M2U00644.json  M2U00647.json  M2U00649.json  action corey ian tom stellers.json  action touch goose vs.json  action warm up.json  austin dog playing.json  bad foreigner joke on mall about 911.json  being weird recording wedding lol we need broll.json  brendan rolling out.json  carlos running ww2 in background.json  corey and owen lentz parking.json  dig dog dig.json  (+39 more)
tests/: __init__.py  test_apply_license_headers.py  test_apply_license_headers_read_fail.py  test_apply_license_headers_update.py  test_cli.py  test_cli_subcommands.py  test_convert_mp4_to_wav.py  test_functionality.py  test_imports.py  test_index_manager.py  test_indexing_config_no_prompt.py  test_ops_main.py  test_pipeline_models_extra.py  test_pipeline_models_yaml.py  test_pipeline_runner.py  test_pipeline_runner_convert.py  test_pipeline_runner_run.py  test_pipeline_runner_transcribe.py  test_pipeline_runner_transcription_skip.py  test_srt_parser.py  test_video_finder.py  test_video_finder_logging.py
utilities/: createdb.py
(+485 files in other folders)
